######################################################################
    Proc::Simple CHANGES
######################################################################

          From 1.29:
                     [RT 69782] Zefram reported race condition in t/sh-c.t,
                     fixed by adding polling loop.

                     Found that kill(-sig, pid) sometimes fails with 
                     'process id not found' although a previous kill(0, pid) 
                     succeeded. This is a race condition condition caused
                     by a newly forked child that hasn't called setsid() yet
                     and therefore its new process group id doesn't exist yet,
                     although the child responds to poll(). kill() now
                     deals with this case.
          From 1.28:
                     [RT 69103] Typo fix by Salvatore Bonaccorso
                     Added support for processes called via 'sh -c' by
                     system() (see "Shell Processes" note in the manpage).
          From 1.27:
                     [RT 62802] Pod fix by Salvatore Bonaccorso
                     [RT 63833] Applied patch to stop reaping PIDs of 
                       no longer existing processes (submitted by perlbotics).
                     Added licensizer
                     [RT 63833] (second part) Added cleanup() class method
                     to delete timing data of reaped processes, avoiding
                     infinite memory growth on long-running processes

          From 1.26: [RT 62285] Pod fix for redirect_output()
                     Fixed github link

          from 1.25: Localize special variables so that the exit status 
                     from waitpid doesn't leak out, causing exit status 
                     to be incorrect (RT33440, fixed by Brad Cavanagh).

          from 1.24: Added copyright header

          from 1.23: Applied doc patch by Janne Chr. Schulz
